--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             ></textarea>
             <input
               type="button"
-              value="Enviar"
+              value="Send"
               class="contact__button button"
             />
           </form>
